--- a/web/index.html
+++ b/web/index.html
@@ -1,115 +1,216 @@
 <!DOCTYPE html>
-<html lang="zh-CN"> <!-- 改为中文 -->
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>实时对话</title> <!-- 修改标题 -->
+<html lang="zh-CN">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>简洁对话框</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif; /* 更现代的字体 */
-            background-color: #f0f2f5; /* 类似聊天应用的背景色 */
-            margin: 0; /* 去掉默认边距 */
-            display: flex;
-            flex-direction: column;
-            height: 100vh; /* 占满整个视窗高度 */
-            align-items: center; /* 水平居中内容 */
-            padding: 20px; /* 页面内边距 */
-            box-sizing: border-box; /* padding 不影响总宽度 */
-        }
-
-        h1 {
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        #controls { /* 包裹按钮，方便布局 */
-            margin-bottom: 15px;
-        }
-
-        #connectButton {
-            padding: 10px 20px;
-            font-size: 16px;
-            color: white;
-            background-color: #007bff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        #connectButton:hover {
-            background-color: #0056b3;
-        }
-
-        #connectButton:disabled {
-            background-color: #cccccc;
-            cursor: not-allowed;
-        }
-
-        /* 聊天消息容器 */
-        #messagesContainer { /* 重命名，更清晰 */
-            width: 90%; /* 容器宽度 */
-            max-width: 700px; /* 最大宽度 */
-            flex-grow: 1; /* 占据剩余空间 */
-            background-color: #ffffff;
-            border: 1px solid #d1d1d1;
-            border-radius: 8px; /* 圆角 */
-            padding: 15px;
-            overflow-y: auto; /* 自动显示滚动条 */
-            display: flex;
-            flex-direction: column; /* 消息垂直排列 */
-            gap: 10px; /* 消息之间的间隙 */
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05); /* 轻微阴影 */
-        }
-
-        /* 单条消息气泡的基础样式 */
-        .message {
-            padding: 10px 15px;
-            border-radius: 15px; /* 气泡圆角 */
-            max-width: 80%; /* 气泡最大宽度 */
-            word-wrap: break-word; /* 长单词换行 */
-            line-height: 1.5; /* 行高 */
-            box-shadow: 0 1px 2px rgba(0,0,0,0.1); /* 气泡阴影 */
-        }
-
-        /* 来自服务器/AI 的消息样式 (靠左) */
-        .server-message {
-            background-color: #e4e6eb; /* 浅灰色背景 */
-            color: #050505; /* 深色文字 */
-            align-self: flex-start; /* 靠左对齐 */
-            border-bottom-left-radius: 5px; /* 左下角调整，更有气泡感 */
-        }
-
-        /* (可选) 如果将来有用户消息，可以添加这个样式 (靠右) */
-        /*
-        .user-message {
-            background-color: #007bff; // 蓝色背景
-            color: white; // 白色文字
-            align-self: flex-end; // 靠右对齐
-            border-bottom-right-radius: 5px; // 右下角调整
-        }
-        */
-
-         /* 连接状态/初始提示信息 */
-        .info-message {
-            font-style: italic;
-            color: #666;
-            text-align: center;
-            align-self: center; /* 居中 */
-            font-size: 0.9em;
-            background: none; /* 无背景 */
-            box-shadow: none; /* 无阴影 */
-            padding: 5px 0;
-        }
-
+      body {
+        background-color: #f5f5f5;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        margin: 0;
+        font-family: Arial, sans-serif;
+      }
+      .chat-container {
+        flex: 1;
+        overflow-y: auto;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+      }
+      .message {
+        max-width: 60%;
+        padding: 10px;
+        border-radius: 15px;
+        font-size: 16px;
+      }
+      .user-message {
+        align-self: flex-end;
+        background-color: #007bff;
+        color: white;
+      }
+      .server-message {
+        align-self: flex-start;
+        background-color: #e9ecef;
+        color: black;
+      }
+      .input-container {
+        display: flex;
+        align-items: center;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 25px;
+        padding: 10px;
+        width: 500px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        margin: 20px auto;
+      }
+      .input-field {
+        flex: 1;
+        border: none;
+        outline: none;
+        font-size: 16px;
+        padding: 5px 10px;
+        border-radius: 20px;
+      }
+      .send-button {
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        padding: 5px;
+        font-size: 16px;
+      }
     </style>
-</head>
+  </head>
+  <body>
+    <div class="chat-container" id="chatContainer">
+      <!-- 对话内容将动态添加 -->
+    </div>
+    <div class="input-container">
+      <input
+        type="text"
+        class="input-field"
+        id="inputField"
+        placeholder="输入你的问题..."
+      />
+      <button class="send-button" onclick="sendMessage()">发送</button>
+    </div>
 
-<body>
-    <h1>SSE 实时消息</h1>
+    <script>
+      const chatContainer = document.getElementById('chatContainer');
+      const inputField = document.getElementById('inputField');
 
-    <button id="connectButton">连接</button>
-    <pre id="messages">等待消息...</pre> <!-- 使用 pre 标签可以更好地显示原始格式 -->
-    <script src="index.js"></script>
-</body>
+      async function fetchSSE(url, onMessage, options) {
+        let reader;
+        const decoder = new TextDecoder('utf-8');
+        let buffer = '';
+        let fullMessage = '';
+        const controller = new AbortController();
+        options.signal = controller.signal;
+        try {
+          const response = await fetch(url, options);
+          if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+          }
+          if (!response.body) {
+            throw new Error('响应体为空');
+          }
+          reader = response.body.getReader();
+          function processSSEmessage(messages) {
+            let event = 'message';
+            const lines = messages.split('\n');
+
+            for (const line of lines) {
+              const trimmedLine = line.trim();
+              if (!trimmedLine) continue; //忽略空行
+
+              if (line.startsWith('data:')) {
+                const message = line.substring(5).trim();
+                if (message) {
+                  let parsedMessage = message;
+                  try {
+                    parsedMessage = JSON.parse(message); // 仅解析 data 内容
+                    if (
+                      parsedMessage.choices &&
+                      parsedMessage.choices[0]?.delta?.content
+                    ) {
+                      fullMessage += parsedMessage.choices[0].delta.content;
+                      onMessage({ event, message: fullMessage }); // 实时更新拼接后的内容
+                      if (
+                        parsedMessage.choices &&
+                        parsedMessage.choices[0]?.finish_reason === 'stop'
+                      ) {
+                        onMessage({ event: 'done', message: fullMessage }); // 流结束事件
+                        controller.abort(); // 停止流
+                      }
+                    }
+                  } catch (e) {
+                    console.warn('Failed to parse JSON:', e);
+                  }
+                  onMessage({ event, message: parsedMessage });
+                }
+              } else if (line.startsWith('event:')) {
+                event = line.substring(6).trim();
+              } else {
+                onMessage({ event, message: lines });
+              }
+            }
+          }
+          async function processStream() {
+            while (true) {
+              const { done, value } = await reader.read();
+              if (done) break;
+              buffer += decoder.decode(value, { stream: true });
+              let separatorIndex;
+              while ((separatorIndex = buffer.indexOf('\n\n')) >= 0) {
+                const messages = buffer.substring(0, separatorIndex);
+                buffer = buffer.substring(separatorIndex + 2);
+                processSSEmessage(messages);
+              }
+            }
+          }
+          await processStream();
+        } catch (error) {
+          // 错误处理
+          onMessage({
+            event: 'error',
+            message: `Error in fetchSSE: ${error.message}`,
+          });
+          throw error; // 抛出错误以便调用者处理
+        } finally {
+          if (reader) {
+            await reader.cancel();
+          }
+        }
+        return {
+          abort: () => controller.abort(),
+        };
+      }
+
+      function sendMessage() {
+        const messageText = inputField.value.trim();
+        if (!messageText) return;
+
+        // 添加用户消息（右侧）
+        const userMessage = document.createElement('div');
+        userMessage.classList.add('message', 'user-message');
+        userMessage.textContent = messageText;
+        chatContainer.appendChild(userMessage);
+
+        // 添加服务器消息（左侧）
+        const severMessage = fetchSSE(
+          'http://localhost:3000/chat',
+          ({ event, message }) => {
+            const serverMessage = document.createElement('div');
+            serverMessage.classList.add('message', 'server-message');
+            serverMessage.textContent = message;
+            chatContainer.appendChild(serverMessage);
+          },
+          {
+            method: 'POST',
+            body: JSON.stringify({ message: messageText }),
+            headers: {
+              'Content-Type': 'application/json',
+            },
+          },
+        );
+
+        // 清空输入框
+        inputField.value = '';
+
+        // 滚动到底部
+        chatContainer.scrollTop = chatContainer.scrollHeight;
+      }
+
+      // 按回车键发送
+      inputField.addEventListener('keypress', (e) => {
+        if (e.key === 'Enter') {
+          sendMessage();
+        }
+      });
+    </script>
+  </body>
 </html>
