--- a/web/index.html
+++ b/web/index.html
@@ -1,216 +1,256 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>简洁对话框</title>
     <style>
-      body {
-        background-color: #f5f5f5;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-        margin: 0;
-        font-family: Arial, sans-serif;
-      }
-      .chat-container {
-        flex: 1;
-        overflow-y: auto;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-      }
-      .message {
-        max-width: 60%;
-        padding: 10px;
-        border-radius: 15px;
-        font-size: 16px;
-      }
-      .user-message {
-        align-self: flex-end;
-        background-color: #007bff;
-        color: white;
-      }
-      .server-message {
-        align-self: flex-start;
-        background-color: #e9ecef;
-        color: black;
-      }
-      .input-container {
-        display: flex;
-        align-items: center;
-        background-color: #fff;
-        border: 1px solid #ddd;
-        border-radius: 25px;
-        padding: 10px;
-        width: 500px;
-        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        margin: 20px auto;
-      }
-      .input-field {
-        flex: 1;
-        border: none;
-        outline: none;
-        font-size: 16px;
-        padding: 5px 10px;
-        border-radius: 20px;
-      }
-      .send-button {
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        padding: 5px;
-        font-size: 16px;
-      }
+        body {
+            background-color: #f5f5f5;
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .chat-container {
+            flex: 1;
+            overflow-y: auto;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .message {
+            max-width: 60%;
+            padding: 10px;
+            border-radius: 15px;
+            font-size: 16px;
+        }
+
+        .user-message {
+            align-self: flex-end;
+            background-color: #007bff;
+            color: white;
+        }
+
+        .server-message {
+            align-self: flex-start;
+            background-color: #e9ecef;
+            color: black;
+        }
+
+        .input-container {
+            display: flex;
+            align-items: center;
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 25px;
+            padding: 10px;
+            width: 500px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+        }
+
+        .input-field {
+            flex: 1;
+            border: none;
+            outline: none;
+            font-size: 16px;
+            padding: 5px 10px;
+            border-radius: 20px;
+        }
+
+        .send-button {
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            padding: 5px;
+            font-size: 16px;
+        }
     </style>
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="chat-container" id="chatContainer">
-      <!-- 对话内容将动态添加 -->
     </div>
     <div class="input-container">
-      <input
-        type="text"
-        class="input-field"
-        id="inputField"
-        placeholder="输入你的问题..."
-      />
-      <button class="send-button" onclick="sendMessage()">发送</button>
+        <input type="text" class="input-field" id="inputField" placeholder="输入你的问题..." />
+        <button class="send-button" onclick="sendMessage()">发送</button>
     </div>
 
     <script>
-      const chatContainer = document.getElementById('chatContainer');
-      const inputField = document.getElementById('inputField');
+        const chatContainer = document.getElementById('chatContainer');
+        const inputField = document.getElementById('inputField');
 
-      async function fetchSSE(url, onMessage, options) {
-        let reader;
-        const decoder = new TextDecoder('utf-8');
-        let buffer = '';
-        let fullMessage = '';
-        const controller = new AbortController();
-        options.signal = controller.signal;
-        try {
-          const response = await fetch(url, options);
-          if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-          }
-          if (!response.body) {
-            throw new Error('响应体为空');
-          }
-          reader = response.body.getReader();
-          function processSSEmessage(messages) {
-            let event = 'message';
-            const lines = messages.split('\n');
-
-            for (const line of lines) {
-              const trimmedLine = line.trim();
-              if (!trimmedLine) continue; //忽略空行
-
-              if (line.startsWith('data:')) {
-                const message = line.substring(5).trim();
-                if (message) {
-                  let parsedMessage = message;
-                  try {
-                    parsedMessage = JSON.parse(message); // 仅解析 data 内容
-                    if (
-                      parsedMessage.choices &&
-                      parsedMessage.choices[0]?.delta?.content
-                    ) {
-                      fullMessage += parsedMessage.choices[0].delta.content;
-                      onMessage({ event, message: fullMessage }); // 实时更新拼接后的内容
-                      if (
-                        parsedMessage.choices &&
-                        parsedMessage.choices[0]?.finish_reason === 'stop'
-                      ) {
-                        onMessage({ event: 'done', message: fullMessage }); // 流结束事件
-                        controller.abort(); // 停止流
-                      }
-                    }
-                  } catch (e) {
-                    console.warn('Failed to parse JSON:', e);
-                  }
-                  onMessage({ event, message: parsedMessage });
-                }
-              } else if (line.startsWith('event:')) {
-                event = line.substring(6).trim();
-              } else {
-                onMessage({ event, message: lines });
-              }
-            }
-          }
-          async function processStream() {
-            while (true) {
-              const { done, value } = await reader.read();
-              if (done) break;
-              buffer += decoder.decode(value, { stream: true });
-              let separatorIndex;
-              while ((separatorIndex = buffer.indexOf('\n\n')) >= 0) {
-                const messages = buffer.substring(0, separatorIndex);
-                buffer = buffer.substring(separatorIndex + 2);
-                processSSEmessage(messages);
-              }
-            }
-          }
-          await processStream();
-        } catch (error) {
-          // 错误处理
-          onMessage({
-            event: 'error',
-            message: `Error in fetchSSE: ${error.message}`,
-          });
-          throw error; // 抛出错误以便调用者处理
-        } finally {
-          if (reader) {
-            await reader.cancel();
-          }
+        function scrollToBottom() {
+            chatContainer.scrollTop = chatContainer.scrollHeight;
         }
-        return {
-          abort: () => controller.abort(),
-        };
-      }
+        async function fetchSSE(url, onMessage, options) {
+            let reader;
+            const decoder = new TextDecoder('utf-8');
+            let buffer = '';
+            let fullMessage = '';
+            const controller = new AbortController();
+            options.signal = controller.signal;
+            try {
+                const response = await fetch(url, options);
+                // if (!response.ok) {
+                //     throw new Error(`HTTP error! status: ${response.status}`);
+                // }
+                if (!response.body) {
+                    throw new Error('响应体为空');
+                }
+                reader = response.body.getReader();
+                // 修改后的关键逻辑
+                function processSSEmessage(messages) {
+                    const lines = messages.split('\n');
+                    let contentBuffer = '';
 
-      function sendMessage() {
-        const messageText = inputField.value.trim();
-        if (!messageText) return;
+                    lines.forEach(line => {
+                        if (!line.startsWith('data:')) return;
 
-        // 添加用户消息（右侧）
-        const userMessage = document.createElement('div');
-        userMessage.classList.add('message', 'user-message');
-        userMessage.textContent = messageText;
-        chatContainer.appendChild(userMessage);
+                        try {
+                            const parsed = JSON.parse(line.slice(5).trim());
+                            const choice = parsed.choices?.[0]?.delta;
 
-        // 添加服务器消息（左侧）
-        const severMessage = fetchSSE(
-          'http://localhost:3000/chat',
-          ({ event, message }) => {
-            const serverMessage = document.createElement('div');
-            serverMessage.classList.add('message', 'server-message');
-            serverMessage.textContent = message;
-            chatContainer.appendChild(serverMessage);
-          },
-          {
-            method: 'POST',
-            body: JSON.stringify({ message: messageText }),
-            headers: {
-              'Content-Type': 'application/json',
-            },
-          },
-        );
+                            // 同时处理 content 和 reasoning_content
+                            const deltaContent = choice?.content || choice?.reasoning_content || '';
+                            contentBuffer += deltaContent;
 
+                            // 实时传递增量内容
+                            if (deltaContent) onMessage({ event: 'message', message: contentBuffer });
+
+                            if (parsed.choices?.[0]?.finish_reason) {
+                                onMessage({
+                                    event: 'done',
+                                    message: contentBuffer,
+                                    fullData: parsed // 传递完整数据
+                                });
+                                // controller.abort();
+                            }
+                        } catch (e) {
+                            onMessage({ event: 'error', message: `Parse error: ${e}` });
+                        }
+                    });
+                }
+                async function processStream() {
+                    while (true) {
+                        const { done, value } = await reader.read();
+                        if (done) break;
+                        buffer += decoder.decode(value, { stream: true });
+                        let separatorIndex;
+                        while ((separatorIndex = buffer.indexOf('\n\n')) >= 0) {
+                            const messages = buffer.substring(0, separatorIndex);
+                            buffer = buffer.substring(separatorIndex + 2);
+                            processSSEmessage(messages);
+                        }
+                    }
+                }
+                await processStream();
+            } catch (error) {
+                // 错误处理
+                onMessage({
+                    event: 'error',
+                    message: `Error in fetchSSE: ${error.message}`,
+                });
+                throw error; 
+            } finally {
+                if (reader) {
+                    await reader.cancel();
+                }
+            }
+            return {
+                abort: () => controller.abort(),
+            };
+        }
+
+        async function sendMessage() {
+            const messageText = inputField.value.trim();
+            if (!messageText) return;
+
+            const userMessageDiv = document.createElement('div');
+            userMessageDiv.classList.add('message', 'user-message');
+            userMessageDiv.textContent = messageText;
+            chatContainer.appendChild(userMessageDiv);
+            scrollToBottom(); // Scroll after adding user message
+
+            inputField.value = '';
+            inputField.focus(); // Keep focus on input
+
+            const serverMessageDiv = document.createElement('div');
+            serverMessageDiv.classList.add('message', 'server-message', 'thinking'); // Add 'thinking' class initially
+            serverMessageDiv.textContent = ''; // Start empty or with a placeholder like '...'
+            chatContainer.appendChild(serverMessageDiv);
+            scrollToBottom(); // Scroll after adding placeholder
+
+            let accumulatedServerMessage = '';
+            let sseAbortController = null; 
+
+            try {
+                sseAbortController = await fetchSSE(
+                    'http://localhost:3000/chat', // 
+
+                    ({ event, message, fullData }) => { 
+                        switch (event) {
+                            case 'message':
+                                accumulatedServerMessage += message;
+                                serverMessageDiv.textContent = accumulatedServerMessage;
+                                if (serverMessageDiv.classList.contains('thinking')) {
+                                    serverMessageDiv.classList.remove('thinking');
+                                }
+                                scrollToBottom()
+                                break;
+                            case 'done':
+                                serverMessageDiv.textContent = accumulatedServerMessage;
+
+                                serverMessageDiv.classList.remove('thinking');
+                                sseAbortController = null; // Clear abort controller reference
+                                scrollToBottom();
+                                break;
+                            case 'error':
+                                serverMessageDiv.textContent = `错误: ${message}`;
+                                serverMessageDiv.style.color = 'red'; // Style as error
+                                serverMessageDiv.classList.remove('thinking');
+                                console.error("SSE Error:", message);
+                                sseAbortController = null; 
+                                scrollToBottom();
+                                break;
+                        }
+                    },
+                    { 
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify({ message: messageText }),
+                    }
+                );
+            } catch (error) {
+                console.error("Failed to initiate SSE connection:", error);
+                serverMessageDiv.textContent = `连接错误: ${error.message}`;
+                serverMessageDiv.style.color = 'red';
+                serverMessageDiv.classList.remove('thinking');
+                scrollToBottom();
+            }
+        
         // 清空输入框
         inputField.value = '';
 
         // 滚动到底部
         chatContainer.scrollTop = chatContainer.scrollHeight;
-      }
-
-      // 按回车键发送
-      inputField.addEventListener('keypress', (e) => {
-        if (e.key === 'Enter') {
-          sendMessage();
         }
-      });
+
+        // 按回车键发送
+        inputField.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                sendMessage();
+            }
+        });
     </script>
-  </body>
+</body>
+
 </html>
